[tool.poetry]
name = "math-game"
version = "0.1.0"
description = ""
authors = ["simhallq <hallqvist.simon@gmail.com>"]
readme = "README.md"
packages = [{ include = "math_game" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
gTTS = "^2.2.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
